--- a/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
+++ b/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
@@ -55,38 +55,21 @@
     <Compile Include="..\AssemblyInfo.solution.cs">
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
-    <Compile Include="ComparableReferenceTypeTestSuite.T1.cs" />
-    <Compile Include="ComparableTestParameters.T1.cs" />
-    <Compile Include="ComparableTestSuite.T1.cs" />
-    <Compile Include="ComparableValueTypeTestSuite.T1.cs" />
-    <Compile Include="EquatableReferenceTypeTestSuite.T1.cs" />
-    <Compile Include="EquatableTestSuite.cs" />
-    <Compile Include="EquatableTestSuite.T1.cs" />
-    <Compile Include="EquatableTestParameters.cs" />
-    <Compile Include="EquatableTestParameters.T1.cs" />
-    <Compile Include="EquatableValueTypeTestSuite.T1.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="ITestEngine.cs" />
-    <Compile Include="Messaging\AlternateFlow.T1.cs" />
-    <Compile Include="Messaging\Domain\InMemoryRepository.T3.cs" />
-    <Compile Include="Messaging\ExecutionFlow.T1.cs" />
-    <Compile Include="Messaging\HappyFlow.T1.cs" />
-    <Compile Include="Messaging\IExecutable.cs" />
-    <Compile Include="Messaging\ScenarioMode.cs" />
+    <Compile Include="Messaging\IReadScenarioResult.T1.cs" />
+    <Compile Include="Messaging\IScenarioResult.cs" />
+    <Compile Include="Messaging\IWriteScenarioResult.cs" />
+    <Compile Include="Messaging\ReadScenario.T1.cs" />
+    <Compile Include="Messaging\Scenario.cs" />
+    <Compile Include="Messaging\ScenarioResult.T1.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
-    <Compile Include="Messaging\Scenario.cs" />
     <Compile Include="Messaging\Scenario.T1.cs" />
+    <Compile Include="Messaging\WriteScenario.T1.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
-    <Compile Include="Test.cs" />
-    <Compile Include="TestArguments.cs" />
-    <Compile Include="TestSuite.T1.cs" />
-    <Compile Include="TestEngine.cs" />
-    <Compile Include="TestSuiteCoverage.T1.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kingo\02.Kingo.csproj">
