--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -44,10 +44,6 @@
       <HintPath>..\packages\JetBrains.Annotations.10.0.0\lib\net20\JetBrains.Annotations.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.3.1\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -139,6 +135,7 @@
     <Compile Include="Messaging\MessageHandlerConnector.T1.cs" />
     <Compile Include="Messaging\MessageHandlerFactory.cs" />
     <Compile Include="Messaging\InstanceLifetime.cs" />
+    <Compile Include="Messaging\MessageHandlerFactoryStub.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.T1.cs" />
     <Compile Include="Messaging\MessageHandlerWrapper.T1.cs" />
     <Compile Include="Messaging\MessageStackTrace.cs" />
@@ -168,7 +165,6 @@
     <Compile Include="Messaging\UnitOfWorkController.cs" />
     <Compile Include="Messaging\UnitOfWorkCache.cs" />
     <Compile Include="Messaging\UnitOfWorkControllerImplementation.cs" />
-    <Compile Include="Messaging\UnityContainerFactory.cs" />
     <Compile Include="Messaging\UnprocessableEntityException.cs" />
     <Compile Include="Messaging\Validation\Command.cs" />
     <Compile Include="EnumOperators.T1.cs" />
