Made message validation a bit more intuitive and added the NotFoundException.

--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Messaging\MicroProcessorMethod.T1.cs" />
     <Compile Include="Messaging\MicroProcessorPipeline.cs" />
     <Compile Include="Messaging\MicroProcessorPipelineStringBuilder.cs" />
+    <Compile Include="Messaging\NotFoundException.cs" />
     <Compile Include="Messaging\NullEventStream.cs" />
     <Compile Include="Messaging\Query.T1.cs" />
     <Compile Include="Messaging\Query.T2.cs" />
