--- a/src/Kingo.Tests/01.Kingo.Tests.csproj
+++ b/src/Kingo.Tests/01.Kingo.Tests.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Messaging\MessageHandlerImplementationSequence.cs" />
     <Compile Include="Messaging\MessageHandlerSpy.T1.cs" />
     <Compile Include="Messaging\MicroProcessorContextSpy.cs" />
-    <Compile Include="Messaging\MicroProcessorPipelineSpy.cs" />
+    <Compile Include="Messaging\MicroProcessorFilterSpy.cs" />
     <Compile Include="Messaging\MicroProcessorSpy.cs" />
     <Compile Include="Messaging\MicroProcessorTest.cs" />
     <Compile Include="Messaging\QueryConnectorOfT1Test.cs" />
@@ -124,7 +124,7 @@
     <Compile Include="Messaging\MessageHandlerSpy.cs" />
     <Compile Include="Messaging\MessageStreamTest.cs" />
     <Compile Include="Messaging\MessageStreamOfT1Test.cs" />
-    <Compile Include="Messaging\Validation\MessageValidationPipelineTest.cs" />
+    <Compile Include="Messaging\Validation\MessageValidationFilterTest.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
     <Compile Include="Clocks\ClockTest.cs" />
