--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -122,9 +122,9 @@
     <Compile Include="Messaging\InternalProcessorException.cs" />
     <Compile Include="Messaging\IUnitOfWorkCache.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
-    <Compile Include="Messaging\IMicroProcessorPipeline.cs" />
+    <Compile Include="Messaging\IMicroProcessorFilter.cs" />
     <Compile Include="Messaging\IMicroProcessorPipelineComponent.cs" />
-    <Compile Include="Messaging\IMicroProcessorPipelineVisitor.cs" />
+    <Compile Include="Messaging\IMicroProcessorFilterVisitor.cs" />
     <Compile Include="Messaging\IUnitOfWorkController.cs" />
     <Compile Include="Messaging\MessageHandler.T1.cs" />
     <Compile Include="Messaging\MessageHandlerAttribute.cs" />
@@ -142,8 +142,11 @@
     <Compile Include="Messaging\HandleAsyncResult.cs" />
     <Compile Include="Messaging\MicroProcessor.cs" />
     <Compile Include="Messaging\MicroProcessorExtensions.cs" />
+    <Compile Include="Messaging\MicroProcessorFilter.cs" />
     <Compile Include="Messaging\MicroProcessorMethod.T1.cs" />
+    <Compile Include="Messaging\MicroProcessorFilterAttribute.cs" />
     <Compile Include="Messaging\MicroProcessorPipeline.cs" />
+    <Compile Include="Messaging\MicroProcessorPipelineStage.cs" />
     <Compile Include="Messaging\MicroProcessorPipelineStringBuilder.cs" />
     <Compile Include="Messaging\NotFoundException.cs" />
     <Compile Include="Messaging\NullEventStream.cs" />
@@ -200,7 +203,7 @@
     <Compile Include="Messaging\Validation\IRequestMessageValidator.cs" />
     <Compile Include="Messaging\Validation\InvalidRequestException.cs" />
     <Compile Include="Messaging\Validation\LambdaExpressionExtensions.cs" />
-    <Compile Include="Messaging\Validation\RequestMessageValidationPipeline.cs" />
+    <Compile Include="Messaging\Validation\ValidateRequestMessageAttribute.cs" />
     <Compile Include="Messaging\Validation\RequestMessageValidator.T1.cs" />
     <Compile Include="Messaging\Validation\RequestMessageValidatorExtensions.cs" />
     <Compile Include="Messaging\Validation\NullValidator.cs" />
