--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -81,6 +81,8 @@
     <Compile Include="ExceptionExtensions.cs" />
     <Compile Include="DynamicMethods\GetHashCodeMethod.T1.cs" />
     <Compile Include="Messaging\AuthorizationFilterAttribute.cs" />
+    <Compile Include="Messaging\Authorization\RequiresClaimsAttribute.cs" />
+    <Compile Include="Messaging\Authorization\RequiresRolesAttribute.cs" />
     <Compile Include="Messaging\Domain\AggregateVersionAttribute.cs" />
     <Compile Include="Messaging\Domain\AggregateIdAttribute.cs" />
     <Compile Include="Messaging\Domain\ChangeSet.T1.cs" />
@@ -140,11 +142,12 @@
     <Compile Include="Messaging\MessageHandlerOrQuery.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.T1.cs" />
     <Compile Include="Messaging\MessageHandlerWrapper.T1.cs" />
+    <Compile Include="Messaging\RequiresMessageSourceFilter.cs" />
     <Compile Include="Messaging\MessageStackTrace.cs" />
     <Compile Include="Messaging\HandleAsyncResult.cs" />
     <Compile Include="Messaging\MicroProcessor.cs" />
     <Compile Include="Messaging\MicroProcessorExtensions.cs" />
-    <Compile Include="Messaging\MicroProcessorFilterDecorator.cs" />
+    <Compile Include="Messaging\MicroProcessorFilterDecorator.T1.cs" />
     <Compile Include="Messaging\MicroProcessorMethod.T1.cs" />
     <Compile Include="Messaging\MicroProcessorFilterAttribute.cs" />
     <Compile Include="Messaging\MicroProcessorPipeline.cs" />
@@ -160,6 +163,7 @@
     <Compile Include="Messaging\QueryDecorator.T2.cs" />
     <Compile Include="Messaging\QueryWrapper.T1.cs" />
     <Compile Include="Messaging\QueryWrapper.T2.cs" />
+    <Compile Include="Messaging\Authorization\RequiresAuthenticatedPrincipalFilter.cs" />
     <Compile Include="Messaging\TypeAttributeProvider.cs" />
     <Compile Include="Messaging\ITypeAttributeProvider.cs" />
     <Compile Include="Messaging\IMethodAttributeProvider.cs" />
@@ -250,9 +254,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Messaging\Authorization\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF $(ConfigurationName) == Release (
