--- a/src/Kingo.Tests/01.Kingo.Tests.csproj
+++ b/src/Kingo.Tests/01.Kingo.Tests.csproj
@@ -84,6 +84,7 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="ComparableTest.cs" />
+    <Compile Include="Messaging\ClaimsProviderTest.cs" />
     <Compile Include="Messaging\Domain\AggregateRootSpy.cs" />
     <Compile Include="Messaging\Domain\AggregateRootSpyCreatedEvent.cs" />
     <Compile Include="Messaging\Domain\AggregateRootSpyRemovedEvent.cs" />
