Implemented first parts of the DateTimeSpan structure.

--- a/src/Kingo.Tests/01.Kingo.Tests.csproj
+++ b/src/Kingo.Tests/01.Kingo.Tests.csproj
@@ -84,6 +84,7 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="ComparableTest.cs" />
+    <Compile Include="DateTimeSpanTest.cs" />
     <Compile Include="Messaging\Authorization\RequiresClaimsAttributeTest.cs" />
     <Compile Include="Messaging\Authorization\RequiresRolesAttributeTest.cs" />
     <Compile Include="Messaging\ClaimsProviderTest.cs" />
