Refactored bits of Aggregates and Repositories towards imporved design.

--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -87,34 +87,33 @@
     <Compile Include="Messaging\Authorization\RequiresRolesAttribute.cs" />
     <Compile Include="Messaging\ClaimNotFoundException.cs" />
     <Compile Include="Messaging\ClaimsProvider.cs" />
-    <Compile Include="Messaging\Domain\AggregateVersionAttribute.cs" />
-    <Compile Include="Messaging\Domain\AggregateIdAttribute.cs" />
+    <Compile Include="Messaging\Domain\AggregateDataObject.T2.cs" />
+    <Compile Include="Messaging\Domain\AggregateRootFactory.cs" />
+    <Compile Include="Messaging\Domain\AggregateSerializationStrategy.cs" />
+    <Compile Include="Messaging\Domain\AggregateSerializationStrategyExtensions.cs" />
     <Compile Include="Messaging\Domain\ChangeSet.T1.cs" />
     <Compile Include="Messaging\Domain\ConcurrencyException.cs" />
     <Compile Include="Messaging\ConflictException.cs" />
-    <Compile Include="Messaging\Domain\AggregateData.T1.cs" />
+    <Compile Include="Messaging\Domain\AggregateDataSet.T1.cs" />
     <Compile Include="Messaging\Domain\AggregateNotFoundException.cs" />
     <Compile Include="Messaging\Domain\AggregateRoot.T2.cs" />
     <Compile Include="Messaging\Domain\DuplicateKeyException.cs" />
-    <Compile Include="Messaging\Domain\Event.cs" />
-    <Compile Include="Messaging\Domain\AggregateEvent.T2.cs" />
-    <Compile Include="Messaging\Domain\Property.cs" />
-    <Compile Include="Messaging\Domain\Property.T1.cs" />
+    <Compile Include="Messaging\Domain\Event.T2.cs" />
+    <Compile Include="Messaging\Domain\IAggregateDataObject.T2.cs" />
+    <Compile Include="Messaging\Domain\IAggregateRootFactory.cs" />
+    <Compile Include="Messaging\Domain\IEvent.T2.cs" />
     <Compile Include="Messaging\Domain\EventPublishedEventArgs.cs" />
     <Compile Include="Messaging\Domain\EventPublishedEventArgs.T1.cs" />
     <Compile Include="Messaging\Domain\IAggregateRoot.cs" />
     <Compile Include="Messaging\Domain\IAggregateRoot.T1.cs" />
     <Compile Include="Messaging\Domain\IChangeSet.T1.cs" />
     <Compile Include="Messaging\Domain\IEvent.cs" />
-    <Compile Include="Messaging\Domain\IAggregateEvent.T2.cs" />
     <Compile Include="Messaging\Domain\IRepository.T2.cs" />
     <Compile Include="Messaging\Domain\ISnapshot.cs" />
     <Compile Include="Messaging\Domain\ISnapshot.T2.cs" />
     <Compile Include="Messaging\Domain\MemoryRepository.T2.cs" />
-    <Compile Include="Messaging\Domain\MemoryRepositoryBehavior.cs" />
     <Compile Include="Messaging\Domain\Repository.T2.cs" />
     <Compile Include="Messaging\Domain\UnitOfWork.T2.cs" />
-    <Compile Include="Messaging\Domain\Snapshot.cs" />
     <Compile Include="Messaging\Domain\Snapshot.T2.cs" />
     <Compile Include="Messaging\EventStream.cs" />
     <Compile Include="Messaging\EventStreamImplementation.cs" />
