--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Messaging\IEventStream.cs" />
     <Compile Include="Messaging\IMicroProcessorFilter.cs" />
     <Compile Include="Messaging\InternalProcessorException.cs" />
+    <Compile Include="Messaging\ISchemaMap.cs" />
     <Compile Include="Messaging\IUnitOfWorkCache.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\IMicroProcessorFilterAttributeVisitor.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="Messaging\QueryWrapper.T1.cs" />
     <Compile Include="Messaging\QueryWrapper.T2.cs" />
     <Compile Include="Messaging\Authorization\RequiresAuthenticatedPrincipalFilter.cs" />
+    <Compile Include="Messaging\SchemaMap.cs" />
     <Compile Include="Messaging\TypeAttributeProvider.cs" />
     <Compile Include="Messaging\ITypeAttributeProvider.cs" />
     <Compile Include="Messaging\IMethodAttributeProvider.cs" />
