Improved the overall MicroProcessorPipeline design while simplifying the framework by dropping the MetadataStream-features.

--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -123,36 +123,32 @@
     <Compile Include="Messaging\ExecuteQueryAsyncMethod.T1.cs" />
     <Compile Include="Messaging\ExecuteQueryAsyncMethod.T2.cs" />
     <Compile Include="Messaging\HandleInputStreamAsyncMethod.cs" />
-    <Compile Include="Messaging\HandleMetadataStreamAsyncMethod.cs" />
-    <Compile Include="Messaging\HandleStreamAsyncMethod.cs" />
     <Compile Include="Messaging\IClaimsProvider.cs" />
     <Compile Include="Messaging\IEventStream.cs" />
     <Compile Include="Messaging\IMicroProcessorFilter.cs" />
     <Compile Include="Messaging\InternalProcessorException.cs" />
+    <Compile Include="Messaging\InvokeAsyncResult.T1.cs" />
     <Compile Include="Messaging\ISchemaMap.cs" />
     <Compile Include="Messaging\IUnitOfWorkCache.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\IMicroProcessorFilterAttributeVisitor.cs" />
     <Compile Include="Messaging\IUnitOfWorkController.cs" />
-    <Compile Include="Messaging\MessageHandler.T1.cs" />
+    <Compile Include="Messaging\MessageHandler.cs" />
     <Compile Include="Messaging\MessageHandlerAttribute.cs" />
     <Compile Include="Messaging\MessageHandlerClass.cs" />
     <Compile Include="Messaging\MessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\MessageHandlerContext.cs" />
     <Compile Include="Messaging\MessageHandlerDecorator.T1.cs" />
-    <Compile Include="Messaging\MessageHandlerPipelineConnector.T1.cs" />
+    <Compile Include="Messaging\MessageHandlerConnector.cs" />
     <Compile Include="Messaging\MessageHandlerFactory.cs" />
     <Compile Include="Messaging\InstanceLifetime.cs" />
     <Compile Include="Messaging\MessageHandlerFactoryStub.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.T1.cs" />
-    <Compile Include="Messaging\MessageHandlerWrapper.T1.cs" />
-    <Compile Include="Messaging\RequiresMessageSourceFilter.cs" />
     <Compile Include="Messaging\MessageStackTrace.cs" />
     <Compile Include="Messaging\HandleAsyncResult.cs" />
     <Compile Include="Messaging\MicroProcessor.cs" />
     <Compile Include="Messaging\MicroProcessorExtensions.cs" />
-    <Compile Include="Messaging\MicroProcessorFilterDecorator.cs" />
     <Compile Include="Messaging\MicroProcessorMethod.T1.cs" />
     <Compile Include="Messaging\MicroProcessorFilterAttribute.cs" />
     <Compile Include="Messaging\MicroProcessorPipeline.cs" />
@@ -160,16 +156,10 @@
     <Compile Include="Messaging\NullEventStream.cs" />
     <Compile Include="Messaging\ProcessingFilterAttribute.cs" />
     <Compile Include="Messaging\Query.T1.cs" />
-    <Compile Include="Messaging\Query.T2.cs" />
-    <Compile Include="Messaging\QueryPipelineConnector.T1.cs" />
-    <Compile Include="Messaging\QueryPipelineConnector.T2.cs" />
+    <Compile Include="Messaging\QueryConnector.T1.cs" />
     <Compile Include="Messaging\QueryContext.cs" />
     <Compile Include="Messaging\QueryDecorator.T1.cs" />
     <Compile Include="Messaging\QueryDecorator.T2.cs" />
-    <Compile Include="Messaging\QueryWrapper.T1.cs" />
-    <Compile Include="Messaging\QueryWrapper.T2.cs" />
-    <Compile Include="Messaging\Authorization\RequiresAuthenticatedPrincipalFilter.cs" />
-    <Compile Include="Messaging\RunCommand.cs" />
     <Compile Include="Messaging\SchemaMap.cs" />
     <Compile Include="Messaging\TypeAttributeProvider.cs" />
     <Compile Include="Messaging\ITypeAttributeProvider.cs" />
@@ -185,7 +175,7 @@
     <Compile Include="Messaging\ValidationFilterAttribute.cs" />
     <Compile Include="Messaging\Validation\CommandBase.cs" />
     <Compile Include="EnumOperators.T1.cs" />
-    <Compile Include="Messaging\Domain\IllegalOperationException.cs" />
+    <Compile Include="Messaging\BusinessRuleException.cs" />
     <Compile Include="Messaging\BadRequestException.cs" />
     <Compile Include="Messaging\IMessageHandler.T1.cs" />
     <Compile Include="Messaging\IMessageStackTrace.cs" />
