--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -118,17 +118,18 @@
     <Compile Include="Messaging\EventStream.cs" />
     <Compile Include="Messaging\EventStreamImplementation.cs" />
     <Compile Include="Messaging\ExceptionHandlingFilterAttribute.cs" />
-    <Compile Include="Messaging\ExecuteAsyncMethod.T1.cs" />
+    <Compile Include="Messaging\ExecuteQueryMethod.T1.cs" />
     <Compile Include="Messaging\ExecuteAsyncResult.T1.cs" />
-    <Compile Include="Messaging\ExecuteQueryAsyncMethod.T1.cs" />
-    <Compile Include="Messaging\ExecuteQueryAsyncMethod.T2.cs" />
-    <Compile Include="Messaging\HandleInputStreamAsyncMethod.cs" />
+    <Compile Include="Messaging\ExecuteQueryMethodImplementation.T1.cs" />
+    <Compile Include="Messaging\ExecuteQueryMethodImplementation.T2.cs" />
+    <Compile Include="Messaging\HandleInputStreamMethod.cs" />
     <Compile Include="Messaging\IClaimsProvider.cs" />
     <Compile Include="Messaging\IEventStream.cs" />
     <Compile Include="Messaging\IMicroProcessorFilter.cs" />
     <Compile Include="Messaging\InternalProcessorException.cs" />
     <Compile Include="Messaging\InvokeAsyncResult.T1.cs" />
     <Compile Include="Messaging\ISchemaMap.cs" />
+    <Compile Include="Messaging\IStackTrace.cs" />
     <Compile Include="Messaging\IUnitOfWorkCache.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\IMicroProcessorFilterAttributeVisitor.cs" />
@@ -145,7 +146,6 @@
     <Compile Include="Messaging\MessageHandlerFactoryStub.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.cs" />
     <Compile Include="Messaging\MessageHandlerOrQuery.T1.cs" />
-    <Compile Include="Messaging\StackTrace.cs" />
     <Compile Include="Messaging\HandleAsyncResult.cs" />
     <Compile Include="Messaging\MicroProcessor.cs" />
     <Compile Include="Messaging\MicroProcessorExtensions.cs" />
@@ -161,6 +161,7 @@
     <Compile Include="Messaging\QueryDecorator.T1.cs" />
     <Compile Include="Messaging\QueryDecorator.T2.cs" />
     <Compile Include="Messaging\SchemaMap.cs" />
+    <Compile Include="Messaging\StackTrace.cs" />
     <Compile Include="Messaging\TypeAttributeProvider.cs" />
     <Compile Include="Messaging\ITypeAttributeProvider.cs" />
     <Compile Include="Messaging\IMethodAttributeProvider.cs" />
@@ -178,7 +179,6 @@
     <Compile Include="Messaging\BusinessRuleException.cs" />
     <Compile Include="Messaging\BadRequestException.cs" />
     <Compile Include="Messaging\IMessageHandler.T1.cs" />
-    <Compile Include="Messaging\IStackTrace.cs" />
     <Compile Include="Messaging\IMicroProcessor.cs" />
     <Compile Include="Messaging\IMicroProcessorContext.cs" />
     <Compile Include="Messaging\EmptyMessageStream.cs" />
