--- a/src/Kingo.TestEngine.Tests/01.Kingo.TestEngine.Tests.csproj
+++ b/src/Kingo.TestEngine.Tests/01.Kingo.TestEngine.Tests.csproj
@@ -67,33 +67,33 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="Messaging\MetaAssertFailedException.cs" />
-    <Compile Include="Messaging\IntegrationTestBaseTest.T1.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Succeeds_IfCorrectResponseIsExpected.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfAssertResponseCallbackFails.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfAssertResponseCallbackIsNull.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfExceptionIsExpectedButAssertCallbackForInnerExceptionFails.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfExceptionIsExpectedButExceptionForInnerExceptionIsNull.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfExceptionIsExpectedButAssertCallbackFails.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfExceptionIsExpectedButDifferentTypeIsThrown.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Fails_IfExceptionIsExpectedButNoneIsThrown.cs" />
+    <Compile Include="Messaging\QueryTestBaseTest.T1.cs" />
+    <Compile Include="Messaging\QueryTestBase_Succeeds_IfCorrectResponseIsExpected.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfAssertResponseCallbackFails.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfAssertResponseCallbackIsNull.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfExceptionIsExpectedButAssertCallbackForInnerExceptionFails.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfExceptionIsExpectedButExceptionForInnerExceptionIsNull.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfExceptionIsExpectedButAssertCallbackFails.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfExceptionIsExpectedButDifferentTypeIsThrown.cs" />
+    <Compile Include="Messaging\QueryTestBase_Fails_IfExceptionIsExpectedButNoneIsThrown.cs" />
     <Compile Include="Messaging\Validation\RequestMessageTestBaseTest.cs" />
-    <Compile Include="Messaging\UnitTestBaseTest.T1.cs" />
-    <Compile Include="Messaging\IntegrationTestBase_Succeeds_IfCorrectExceptionAndInnerExceptionAreExpected.cs" />
-    <Compile Include="Messaging\UnitTestBase_Succeeds_IfStreamIsCorrectlyVerified.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfAssertEventCallbackFails.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfAssertEventCallbackIsNull.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExceptionIsExpectedButExceptionForInnerExceptionIsNull.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExceptionIsExpectedButAssertCallbackFails.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExceptionIsExpectedButDifferentTypeIsThrown.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExceptionIsExpectedButNoneIsThrown.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExpectedEventCountDoesNotMatchActualEventCount.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfExpectedEventCountIsInvalid.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfAssertEventStreamIsNull.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfAssertEventIndexIsOutOfRange.cs" />
-    <Compile Include="Messaging\UnitTestBase_Fails_IfAssertEventIndexIsNegative.cs" />
-    <Compile Include="Messaging\UnitTestBase_Succeeds_IfCorrectExceptionAndInnerExceptionAreExpected.cs" />
-    <Compile Include="Messaging\UnitTestBase_Succeeds_IfCorrectExceptionIsExpected.cs" />
-    <Compile Include="Messaging\UnitTestBase_Succeeds_IfStreamIsCorrectlyAssumedEmpty.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBaseTest.T1.cs" />
+    <Compile Include="Messaging\QueryTestBase_Succeeds_IfCorrectExceptionAndInnerExceptionAreExpected.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Succeeds_IfStreamIsCorrectlyVerified.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfAssertEventCallbackFails.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfAssertEventCallbackIsNull.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExceptionIsExpectedButExceptionForInnerExceptionIsNull.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExceptionIsExpectedButAssertCallbackFails.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExceptionIsExpectedButDifferentTypeIsThrown.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExceptionIsExpectedButNoneIsThrown.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExpectedEventCountDoesNotMatchActualEventCount.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfExpectedEventCountIsInvalid.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfAssertEventStreamIsNull.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfAssertEventIndexIsOutOfRange.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Fails_IfAssertEventIndexIsNegative.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Succeeds_IfCorrectExceptionAndInnerExceptionAreExpected.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Succeeds_IfCorrectExceptionIsExpected.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase_Succeeds_IfStreamIsCorrectlyAssumedEmpty.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
   </ItemGroup>
   <ItemGroup>
