--- a/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
+++ b/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
@@ -56,18 +56,18 @@
       <Link>Properties\AssemblyInfo.solution.cs</Link>
     </Compile>
     <Compile Include="AutomatedTest.cs" />
-    <Compile Include="Messaging\IIntegrationTestResult.T1.cs" />
-    <Compile Include="Messaging\IScenarioResult.cs" />
-    <Compile Include="Messaging\IUnitTestResult.cs" />
-    <Compile Include="Messaging\IntegrationTestBase.T1.cs" />
-    <Compile Include="Messaging\Scenario.cs" />
-    <Compile Include="Messaging\ScenarioResult.T1.cs" />
+    <Compile Include="Messaging\IQueryTestResult.T1.cs" />
+    <Compile Include="Messaging\ITestResult.cs" />
+    <Compile Include="Messaging\IMessageHandlerTestResult.cs" />
+    <Compile Include="Messaging\QueryTestBase.T1.cs" />
+    <Compile Include="Messaging\ScenarioTest.cs" />
+    <Compile Include="Messaging\TestResult.T1.cs" />
     <Compile Include="Messaging\Validation\IValidationResult.cs" />
     <Compile Include="Messaging\Validation\RequestMessageTestBase.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.project.cs" />
-    <Compile Include="Messaging\Scenario.T1.cs" />
-    <Compile Include="Messaging\UnitTestBase.T1.cs" />
+    <Compile Include="Messaging\ScenarioTest.T1.cs" />
+    <Compile Include="Messaging\MessageHandlerTestBase.T1.cs" />
     <Compile Include="Resources\ExceptionMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
